<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/action_home"
        android:title="@string/home"
        android:icon="@drawable/ic_action_home"
        />
    <item android:id="@+id/action_pronounce"
        android:title="@string/pronounce"
        android:icon="@drawable/ic_action_pronunce"
        />
    <item android:id="@+id/action_gift"
        android:title="@string/gift"
        android:icon="@drawable/ic_action_gift"
        />
    <item android:id="@+id/action_rank"
        android:title="@string/rank"
        android:icon="@drawable/ic_action_rank"
        />
    <item android:id="@+id/action_setting"
        android:title="@string/setting"
        android:icon="@drawable/ic_action_setting"
        />
</menu>