<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_radius"
    android:padding="@dimen/_14ssp"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical">
    <ImageView
        android:layout_width="@dimen/_100ssp"
        android:layout_height="@dimen/_100ssp"
        android:src="@drawable/ic_loudly_crying_face"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_have_fallen_out_of_the_top_10"
        android:fontFamily="@font/gilroy_semi_bold"
        android:textSize="@dimen/_18sdp"
        android:gravity="center"
        android:layout_marginTop="@dimen/_16ssp"
        android:textColor="@color/black"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/try_to_get_back_to_the_top_position"
        android:fontFamily="@font/roboto_regular"
        android:textSize="@dimen/_14sdp"
        android:layout_marginTop="@dimen/_4ssp"
        android:gravity="center"
        android:textColor="@color/gray_text"/>
    <TextView
        android:id="@+id/btnClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_continue"
        android:fontFamily="@font/gilroy_semi_bold"
        android:textSize="@dimen/_14sdp"
        android:gravity="center"
        android:layout_marginVertical="@dimen/_16ssp"
        android:background="@drawable/bg_blue_button"
        android:textColor="@color/white"/>
</LinearLayout>