<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:padding="@dimen/_10sdp"
    android:paddingHorizontal="@dimen/_20sdp"
    android:background="@color/white"
    android:focusable="true"
    android:clickable="true"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:paddingHorizontal="@dimen/_20sdp"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_20sdp"
            android:fontFamily="@font/gilroy_semi_bold"
            android:text="@string/let_s_learn_vietnamese_pronunciation"
            android:textColor="@color/black"
            android:backgroundTint="#482FF7"
            android:gravity="center"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/practice_listening_and_learning_to_pronounce_sounds_in_vietnamese"
            android:textColor="#989898"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="center"/>
        <Button
            android:id="@+id/btnTest"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/star_the_test"
            android:background="@drawable/bg_blue_button"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/roboto_bold"
            android:layout_marginTop="@dimen/_20sdp"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_pronun"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_gravity="center"
        android:layout_weight="1"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        tools:listitem="@layout/item_pronunciation" />

</LinearLayout>