<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#33FFFFFF">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_dialog"
        android:padding="@dimen/_14sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/repeat"
                android:textSize="@dimen/_20sdp"
                android:fontFamily="@font/roboto_bold"
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="#173430"/>
            <ImageView
                android:id="@+id/btnClose"
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/ic_close_dialog" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">
            <CheckBox
                android:id="@+id/cbMon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_select_repeat"
                android:background="@drawable/bg_select_day"
                android:button="@android:color/transparent"
                android:fontFamily="@font/roboto_bold"
                android:paddingHorizontal="@dimen/_10sdp"
                android:drawablePadding="@dimen/_5sdp"
                android:text="@string/monday"
                android:textColor="@color/black"
                android:textSize="@dimen/_16sdp" />
            <CheckBox
                android:id="@+id/cbTue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_unselect_repeat"
                android:background="@drawable/bg_unselect_day"
                android:button="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/tuesday"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">
            <CheckBox
                android:id="@+id/cbWed"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:gravity="center_vertical"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_unselect_repeat"
                android:background="@drawable/bg_unselect_day"
                android:button="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/wednesday"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_16sdp" />
            <CheckBox
                android:id="@+id/cbThus"
                android:layout_width="0dp"
                android:gravity="center_vertical"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_unselect_repeat"
                android:background="@drawable/bg_unselect_day"
                android:button="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/thursday"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">
            <CheckBox
                android:id="@+id/cbFri"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_unselect_repeat"
                android:background="@drawable/bg_unselect_day"
                android:button="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/friday"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_16sdp" />
            <CheckBox
                android:id="@+id/cbSat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_unselect_repeat"
                android:background="@drawable/bg_unselect_day"
                android:button="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/saturday"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="@dimen/_10sdp">
            <CheckBox
                android:id="@+id/cbSun"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:layout_marginHorizontal="5dp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_unselect_repeat"
                android:background="@drawable/bg_unselect_day"
                android:button="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/sunday"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_16sdp" />
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:drawablePadding="@dimen/_5sdp"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_unselect_repeat"
                android:background="@drawable/bg_unselect_day"
                android:button="@android:color/transparent"
                android:fontFamily="@font/roboto_regular"
                android:paddingHorizontal="@dimen/_10sdp"
                android:text="@string/tuesday"
                android:visibility="invisible"
                android:textColor="@color/gray_text"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>

        <TextView
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:background="@drawable/bg_save"
            android:fontFamily="@font/gilroy_semi_bold"
            android:gravity="center"
            android:text="@string/save"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>