<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:clickable="true"
    android:focusable="true">
    <LinearLayout
        android:id="@+id/title_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="@dimen/_16sdp"
        android:gravity="center">


        <TextView
            android:text="@string/setting"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_14sdp"
            android:textColor="@color/black"
            android:fontFamily="@font/roboto_bold"
            android:layout_weight="1"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/title_setting"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="@dimen/_16sdp"
        android:paddingHorizontal="@dimen/_16sdp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp"
            android:background="@drawable/bg_item_setting">
        <ImageView
            android:id="@+id/ic_reminder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_reminder"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/reminder"
                android:fontFamily="@font/gilroy_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toRightOf="@id/ic_reminder"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="@dimen/_14sdp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/arrow_right"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_item_setting">
            <ImageView
                android:id="@+id/ic_proflie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_profile"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/profile"
                android:fontFamily="@font/gilroy_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toRightOf="@id/ic_proflie"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="@dimen/_14sdp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/arrow_right"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_14sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/bg_item_setting">
            <ImageView
                android:id="@+id/ic_change_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_change_password"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:text="@string/change_password"
                android:fontFamily="@font/gilroy_semi_bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_13sdp"
                app:layout_constraintLeft_toRightOf="@id/ic_change_password"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginLeft="@dimen/_14sdp"/>
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:src="@drawable/arrow_right"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/btnLogout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:textSize="@dimen/_13sdp"
            android:fontFamily="@font/gilroy_semi_bold"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:background="@drawable/bg_logout"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>